Remove bulk-shard-count.
The config is not needed.

Signed-off-by: Yufei Cai <yufei.cai@bosch.io>